[package]
name = "formatting_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1"
clap = { version = "4", features = ["derive"] }
regex = "1.10.5"
anyhow = "1.0.86"
rand = "0.8.5"
lazy-regex = "3.3.0"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
reqwest = "0.12.7"
