[package]
edition = "2021"
name = "formatting_utils"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4", features = ["derive"] }
csv = "1"
eframe = "0.31.1"
google-drive3 = "6.0.0"
http-body-util = "0.1.3"
lazy-regex = "3.3.0"
rand = "0.8.5"
regex = "1.10.5"
reqwest = "0.12.7"
rfd = "0.15.3"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
